# dog-classifier

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  guide.txt  resources.qrc
include/: classifierui.h  droparea.h  image_processor.h  neural_network.h  split_move_files.h
src/: classifierui.cpp  classifierui.ui  droparea.cpp  image_processor.cpp  main.cpp  neural_network.cpp
utils/: split_move_files.cpp
